Initialized main content section

--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -1,10 +1,84 @@
 @import "./variables";
 
-main {
-    width: 100%;
-    min-height: 100vh;
+.home-container {
+    display: flex;
+    min-height: fit-content;
+}
+
+// Sidebar styles
+.sidebar-box {
+    border-right: 0.5px solid $powder-blue;
+    padding: 20px 20px;
     background-color: $bg-color;
 }
-h1 {
-    color: $primary;
+
+.sidebar-social-container {
+    margin-top: 30px;
+
+    h2 {
+        color: $powder-blue;
+        font-size: 1.5rem;
+        font-weight: bold;
+    }
+
+    .sidebar-social-link {
+        background-color: $primary;
+        width: 95%;
+        height: 40px;
+        transition: 0.2s all ease;
+
+        &:hover {
+            background-color: lightgray;
+        }
+
+        .social-icon {
+            color: $bg-color;
+            font-size: 2rem;
+            position: absolute;
+            top: 5;
+            left: 5;
+        }
+
+        .social-link-text {
+            color: $bg-color;
+            font-weight: 700;
+            font-family: var(--font-montserrat);
+            font-size: 1.2rem;
+        }
+    }
+
+}
+
+.sidebar-image-container {
+    img {
+        height: 300px !important;
+        width: 300px !important;
+        border-radius: 50%;
+        object-fit: cover;
+    }
+}
+
+//Main content styles
+main {
+    min-height: 100vh;
+    background-color: $bg-color;
+    margin: 0;
+    padding: 20px 20px;
+    position: relative;
+
+    .main-heading {
+        font-size: 24rem;
+        margin: 0;
+        padding: 0;
+        line-height: 1;
+        background: linear-gradient(to right, $powder-blue, $primary, #0000ff);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        background-clip: text;
+    }
+
+    span {
+        color: $primary;
+        font-size: 1.2rem;
+    }
 }
