Added main section and timeline

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,5 +1,10 @@
+// Colors
 $primary: #ffffff;
 $secondary: #1c5d99;
 $tertiary: #639FAB;
 $bg-color: #222222;
 $powder-blue: #BBCDE5;
+
+//Fonts
+$font-open-sans: var(--font-open-sans);
+$font-mont: var(--font-montserrat);
