--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -30,6 +30,20 @@
         height: 40px;
         transition: 0.2s all ease;
         @include mixins.flex-center;
+        animation: fade-in 0.3s forwards ease-in-out;
+        opacity: 0;
+        &:nth-child(2) {
+            animation-delay: 0.3s;
+        }
+        &:nth-child(3) {
+            animation-delay: 0.6s;
+        }
+        &:nth-child(4) {
+            animation-delay: 0.9s;
+        }
+        &:nth-child(5) {
+            animation-delay: 1.2s;
+        }
 
         &:hover {
             background-color: lightgray;
@@ -80,6 +94,7 @@ main {
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
         background-clip: text;
+        animation: fade-in ease-in 0.3s;
     }
 
     span, .about-text {
@@ -118,6 +133,17 @@ main {
                 margin-left: 20px;
             }
         }
+    }
+}
+
+@keyframes fade-in {
+    from {
+        opacity: 0;
+        transform: translateY(30px);
+    }
+    to {
+        opacity: 1;
+        transform: translateY(0);
     }
 }
 
