Split main page into multiple files

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -4,6 +4,7 @@ $secondary: #1c5d99;
 $tertiary: #639FAB;
 $bg-color: #222222;
 $powder-blue: #BBCDE5;
+$dark-gray: rgb(91, 91, 91);
 
 //Fonts
 $font-open-sans: var(--font-open-sans);
