--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -1,9 +1,10 @@
 @use "./variables";
 
-@mixin flex-center {
+@mixin flex-center ($dir: row) {
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: $dir;
 }
 @mixin text-normal ($size: 1.2rem) {
     color: variables.$primary;
