--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -64,6 +64,9 @@ main {
                 &:nth-child(3) {
                     animation-delay: 0.9s;
                 }
+                &:nth-child(4) {
+                    animation-delay: 1.2s;
+                }
             }
         }
     }
