--- a/src/styles/blogpost.scss
+++ b/src/styles/blogpost.scss
@@ -19,7 +19,7 @@
         font-family: variables.$font-mont;
     }
 
-    &__title {
+    &__title, &__h2 {
         font-size: clamp(2rem, 3.5vw, 3.5rem);
         font-family: variables.$font-open-sans;
         font-weight: bold;
@@ -57,6 +57,11 @@
         color: variables.$primary;
         margin-top: 20px;
         line-height: 1.5;
+    }
+
+    &__h2 {
+        font-size: clamp(1.5rem, 2.7vw, 2.7rem);
+        margin-top: 30px;
     }
 
     &__quote {
